# vivrt

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
blender/: README.md  build_addon.py  dev_install.py
blender/vibrt_blender/: __init__.py  _log.py  bin_writer.py  color_fold.py  engine.py  exporter.py  hair_export.py  ies.py  material_export.py  preferences.py  properties.py  runner.py  test_bin_writer.py  test_color_fold.py  test_ies.py
optix/: Cargo.toml
optix-sys/: Cargo.toml
optix-sys/examples/: simple_render.rs
optix-sys/src/: init.rs  lib.rs
optix/examples/: simple_render.rs
optix/src/: accel.rs  context.rs  denoiser.rs  lib.rs  module.rs  pipeline.rs  program_group.rs  sbt.rs  types.rs
pbrt-parser/: Cargo.toml
pbrt-parser/examples/: parse.rs
pbrt-parser/src/: error.rs  lexer.rs  lib.rs  parser.rs  types.rs
renderer/: Cargo.toml
renderer/src/: devicecode.cu  devicecode.h  gpu_types.rs  main.rs  ply.rs  scene.rs  subdivision.rs  transform.rs
scripts/: _blender_cycles.py  _blender_export.py  _blender_render.py  _inproc_export_bench.py  _inproc_render_bench.py  _test_diffuse_envmap.py  _uv_probe_build.py  _uv_probe_compare.py  check_struct_layouts.py  compare_vibrt_cycles.py  render_blend.py  render_cycles.py  uv_probe.py
test_scenes/cornell/: make_scene.py  scene.json
test_scenes/furnace/: make_scene.py  scene.json
test_scenes/ies_light/ies_light/: ies_light.blend
test_scenes/veach_mis/: make_scene.py  scene.json
vibrt/: Cargo.toml
vibrt-blender/: Cargo.toml
vibrt-blender/src/: camera.rs  devicecode.cu  devicecode.h  gpu_types.rs  image_io.rs  main.rs  pipeline.rs  principled.rs  scene_format.rs  scene_loader.rs  transform.rs
vibrt/src/: color_fold.rs  devicecode.cu  devicecode.h  gpu_types.rs  image_io.rs  lib.rs  main.rs  pipeline.rs  principled.rs  python.rs  render.rs  scene.rs  scene_format.rs  scene_loader.rs  subdivision.rs  transform.rs
vivrt/src/: devicecode.cu  devicecode.h  gpu_types.rs  main.rs  scene.rs
