[package]
name = "optix-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings to NVIDIA OptiX 9.0.0 ray tracing SDK"
license = "MIT"
links = "optix"
build = "build.rs"

[dependencies]
libloading = "0.8"

[dev-dependencies]
cudarc = { version = "0.19", default-features = false, features = ["driver", "dynamic-loading", "cuda-version-from-build-system"] }

[build-dependencies]
bindgen = "0.72"
