[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
optix = { path = "../optix" }
optix-sys = { path = "../optix-sys" }
pbrt-parser = { path = "../pbrt-parser" }
cudarc = { version = "0.19", default-features = false, features = ["driver", "dynamic-loading", "cuda-version-from-build-system", "nvrtc"] }
clap = { version = "4", features = ["derive"] }
png = "0.17"
