[package]
name = "vibrt-blender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vibrt-blender"
path = "src/main.rs"

[dependencies]
optix = { path = "../optix" }
optix-sys = { path = "../optix-sys" }
cudarc = { version = "0.19", default-features = false, features = ["driver", "dynamic-loading", "cuda-version-from-build-system", "nvrtc"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "exr"] }
