[package]
name = "vibrt"
version = "0.1.0"
edition = "2021"

[lib]
# `vibrt_native` matches the Python extension's import name — the PyO3
# cdylib lands at `target/release/vibrt_native.dll` (Windows) and only
# needs to be renamed to `vibrt_native.pyd` for Blender to import it as
# `vibrt_blender.vibrt_native`. The crate ships ONLY this library now;
# the standalone CLI binary has been removed in favour of running the
# renderer in-process under Blender via the bundled extension.
name = "vibrt_native"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
# Build the PyO3 extension. Off by default so plain `cargo build` produces
# only the rlib. `cargo build --release --features python` produces the
# cdylib at `target/release/vibrt_native.dll`, which `build_addon.py`
# stages as `vibrt_blender/vibrt_native.pyd`.
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
optix = { path = "../optix" }
optix-sys = { path = "../optix-sys" }
cudarc = { version = "0.19", default-features = false, features = ["driver", "dynamic-loading", "cuda-version-from-build-system", "nvrtc"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = "1"
rayon = "1"
pyo3 = { version = "0.22", features = ["abi3-py311", "extension-module"], optional = true }
numpy = { version = "0.22", optional = true }
